added eventually separated tests - restored util.validateQuery - small changes